--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -1,31 +1,27 @@
 body {
     margin: 0px;
     color: #262626;
+    font-family: serif;
     
 }
 /*Inicio de la barra de navegación ---------------------------------------- */
-header {
-    background-color:white;
-    margin: 0px;
-    padding: 0px;
-    color: #262626;
-    
+
+header{
+    background-color: #4A6D8C;
+    color: #F2F2F2;
 }
 
 .navbar {
     display: flex;
-    justify-content: space-between 
+    justify-content: space-between ;
     
 }
 
 .logo {
-    font-family: serif;
     font-size: 30px;
-    font-weight: bold;
     padding: 15px;
-    
-
 }
+
 .logo a {
     text-decoration: none;
     color: inherit;
@@ -43,74 +39,79 @@ li {
 
 .user,
 .menu-icon {
-    width: 25px;
-    height: 25px;  
-    margin-right: 10px;  
+    width: 30px;
+    height: 30px;  
+    margin-right: 10px;
 }
-/*Fin de la barra de navegación ---------------------------------------- */
 
+/*Fin de la barra de navegación ---------------------------------------- */
 /*Inicio del formulario         ---------------------------------------- */
 
 .login-form {
     padding-top: 15%;
     padding-bottom: 25%;
     padding-inline: 30%;
-    border: 1px solid #ccc; /* Añadido para el borde */
-    border-radius: 10px; /* Bordes redondeados */
-    
-    
-    
 }
 
 h1{
     text-align: center;
     margin-block: 30px;
-    
+    color: #324359;
 }
 
 #mail,
 #contraseña {
     width: 100%;
     background-color: #AAB3BF;
-    padding: 10px; /* Añadido para mejorar el aspecto del input */
-    margin-bottom: 10px; /* Espaciado entre inputs */
-    border: 1px solid #ccc; /* Añadido para el borde */
+    padding: 10px;
+    margin-bottom: 10px;
+    border: none;
     border-radius: 5px;
 }
+
 .form-g {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
 }
 
+.button-login button {
+    background-color: #324359;
+    color: white;
+    padding: 15px;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/*Fin    del formulario         ---------------------------------------- */
+/*---------------------------------------------------------------------- */
+
 .o {
     text-align: center;
 }
+
 .icons {
     display: flex;
     justify-content: center;
 }
-.nueva-cuenta {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px; /* Espaciado superior para el enlace de nueva cuenta */
-}
+
 .icon1,
 .icon2,
 .icon3 {
     width: 25px;
     height: 25px;
 }
-.button-login button {
-    background-color: #262626;
-    color: #DFE5F2;
-    padding: 10px 20px;
-    font-size: 18px;
-    border: none;
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer;
+
+.nueva-cuenta {
+    text-align: center;
+    margin-top: 10px;
 }
-/*Fin    del formulario         ---------------------------------------- */
+
+
+/*---------------------------------------------------------------------- */
+/* --------------------------------------------------------------------- */
 
 .politica {
     padding-inline: 10px;
@@ -124,6 +125,8 @@ h1{
     color: inherit;
 }
 
+/* --------------------------------------------------------------------- */
+/* Contenido del pie de página ------------------------------------------*/
 
 footer {
     font-size: 20px;
