--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -1,31 +1,26 @@
 body {
     margin: 0px;
     color: #262626;
+    font-family: serif;
     
 }
 /*Inicio de la barra de navegación ---------------------------------------- */
-header {
-    background-color:white;
-    margin: 0px;
-    padding: 0px;
-    color: #262626;
-    
+header{
+    background-color: #4A6D8C;
+    color: #F2F2F2;
 }
 
 .navbar {
     display: flex;
-    justify-content: space-between 
+    justify-content: space-between ;
     
 }
 
 .logo {
-    font-family: serif;
     font-size: 30px;
-    font-weight: bold;
     padding: 15px;
-    
-
 }
+
 .logo a {
     text-decoration: none;
     color: inherit;
@@ -43,42 +38,44 @@ li {
 
 .user,
 .menu-icon {
-    width: 25px;
-    height: 25px;  
-    margin-right: 10px;  
+    width: 30px;
+    height: 30px;  
+    margin-right: 10px;
 }
 /*Fin de la barra de navegación ---------------------------------------- */
 /*Formulario-------------------------------------------------------------*/
+
 .part1 {
-    border: 1px solid #ccc; /* Añadido para el borde */
-    border-radius: 10px; /* Bordes redondeados */
+    border-radius: 5px; 
     padding-top: 15%;
     padding-bottom: 25%;
     padding-inline: 25%;
 }
+
 h1 {
     text-align: center;
+    color: #324359;
 }
 
 #identificacion {
     display: flex;
-    
-
 }
+
 .name {
     margin-right: 25px;
     margin-bottom: 10px;
     width: 50%;
 }
+
 .last_name{
     width: 50%;
 }
-.mail {
-    margin-bottom: 10px;
-}
+
+.mail,
 .password {
     margin-bottom: 10px;
 }
+
 .name label {
     display: block;
 }
@@ -87,7 +84,6 @@ h1 {
 }
 .mail label {
     display: block;
-
 }
 .password label {
     display: block;
@@ -100,31 +96,29 @@ h1 {
     background-color: #AAB3BF;
     width: 100%;
     border-radius: 5px;
-    border: 1px #ccc;
+    border: none;
     padding: 10px;
 }
 .check {
     margin-bottom: 10px;
 }
 .send button {
-    background-color: #262626;
+    background-color: #324359;
     color: white;
-    padding: 10px;
+    padding: 15px;
     border: none;
     border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
 }
 /*-----------------------------------------------------------------------*/
 .o {
     text-align: center;
 }
+
 .icons {
     display: flex;
     justify-content: center;
-}
-.nueva-cuenta {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px; /* Espaciado superior para el enlace de nueva cuenta */
 }
 .icon1,
 .icon2,
@@ -132,16 +126,14 @@ h1 {
     width: 25px;
     height: 25px;
 }
-.button-login button {
-    background-color: #262626;
-    color: #DFE5F2;
-    padding: 10px 20px;
-    font-size: 18px;
-    border: none;
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer;
+
+.nueva-cuenta {
+    text-align: center;
+    margin-top: 10px;
 }
-/*Fin    del formulario         ---------------------------------------- */
+
+
+/*------------------------------------------------------------------------ */
 
 .politica {
     padding-inline: 10px;
@@ -154,7 +146,7 @@ h1 {
     text-decoration: none;
     color: inherit;
 }
-
+/* Pie de página --------------------------------------------------------- */
 
 footer {
     font-size: 20px;
