--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ header{
     color: inherit;
 }
 
-ul {
+.navbar ul {
     display: flex;
     list-style: none;
     margin: 0px;
@@ -46,7 +46,8 @@ li {
 
 .inicio {
     display: flex;
-    margin: 2em;
+    margin-top: 60px;
+    margin-inline: 20px;
 }
 
 .student {
@@ -75,7 +76,7 @@ li {
 #btn2 {
     
     background-color: #324359;
-    color: #DFE5F2;
+    color: white;
     padding: 15px;
     font-size: 18px;
     border: none;
@@ -90,7 +91,7 @@ li {
 
 .informacion_breve {
     display: flex;
-    margin:10%;
+    margin: 40px auto;
     
 }
 
@@ -113,7 +114,61 @@ li {
 }
 
 /* Fin del contenido de la sección de información ----------------------*/
+/* Productos -----------------------------------------------------------*/
 
+.productos {
+    display: block;
+}
+.productos h1 {
+    color: #324359;
+}
+
+.curso {
+    text-align: center;
+    border: 1px solid #324359;
+    border-radius: 10px;
+}
+
+.curso h1 {
+    font-size: 45px;
+    margin-bottom: 0;
+}
+
+.basico,
+.especializado {
+    display: flex;
+    justify-content: center;
+    
+}
+.curso {
+    margin: 15px;
+}
+.precio {
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+}
+.moneda {
+    font-size: 20px;
+    margin-block: auto;
+    margin-left: 10px;
+}
+
+.productos ul {
+    padding-right: 20px;
+}
+.btn {
+    border-radius: 5px;
+    border: none;
+    background-color: #324359;
+    color: white;
+    font: 18px;
+    cursor: pointer;
+    padding: 15px;
+    margin-bottom: 10px;
+}
+
+/* Productos -----------------------------------------------------------*/
 /* Contenido del pie de página -----------------------------------------*/
 
 footer {
