--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,6 @@ li {
 }
 
 .student {
-    display: flex;
-    justify-content: center;
     margin-right: 3em;
 
 }
@@ -91,25 +89,20 @@ li {
 
 .informacion_breve {
     display: flex;
-    margin: 40px auto;
+    margin: 40px;
     
 }
 
-.info1,
-.info2,
-.info3 {
+.info {
     padding: 20px;
     text-align: center;
 }
 .informacion_breve h1 {
     color: #324359;
 }
-.img1,
-.img2,
-.img3 {
+.img {
     width: 70px;
     height: 70px;
-    display: block;
     margin: 0 auto;
 }
 
@@ -162,10 +155,11 @@ li {
     border: none;
     background-color: #324359;
     color: white;
-    font: 18px;
+    font-size: 18px;
     cursor: pointer;
     padding: 15px;
     margin-bottom: 10px;
+    
 }
 
 /* Productos -----------------------------------------------------------*/
